Added rotating cubes to replace the flipping tiles on the front page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,7 +23,7 @@
 @import "components/buttons";
 @import "components/carousel";
 @import "components/dropdown";
-@import "components/tiles";
+@import "components/cubes";
 
 
 @import "layout/footer";
