Changed the cube rotation to be a timer based event Started on the Summary Panel

--- a/src/pages/includes/head.html
+++ b/src/pages/includes/head.html
@@ -11,6 +11,10 @@
     <!-- content delivery network to serve modernizr from Cloudflare's network  -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     
+    <!-- velocity - javascripts light weight CSS manipulation library -->
+    <!-- Velocity is an animation engine with the same API as jQuery's $.animate(). It works with and without jQuery. -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/velocity/1.2.3/velocity.min.js"></script>
+    
     <!-- local file fallback -->
     <script type='text/javascript'>
       window.Modernizr || document.write('<script src="scripts/vendor/modernizr.js">\x3C/script>')
