Added the Featured Causes Panel - used slick slider included new fonts directory added new images for slider content with slider styling

--- a/src/pages/includes/footer.html
+++ b/src/pages/includes/footer.html
@@ -1,7 +1,19 @@
+<!--
 <footer class="row pnl-footer">
     
-    <!-- Footer -->
+     Footer 
     <div class="large-12 columns">
+        &#169;  Pimp My Cause.
+    </div>
+
+</footer>-->
+
+<!-- Lili replaced my code to reassess later -->
+
+<footer>
+    
+    <!-- Footer -->
+    <div class="large-12">
         &#169;  Pimp My Cause.
     </div>
 
