--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,7 +1,15 @@
 /* =================================
    LAYOUT / FOOTER
    ================================= */
+// Lili changed footer code
 
-.pnl-footer {
+// .pnl-footer {
+
+footer {
     background-color: $colr-pnl-footer;
+    height: 5em;
+    margin: 0;
+    width: 100%;
+    color: $colr-txt;
+    text-align: center; 
 }
