--- a/src/pages/includes/header.html
+++ b/src/pages/includes/header.html
@@ -38,7 +38,7 @@
                             <li><a href="#">Our Partners</a></li>
                         </ul>
                         </li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>   
                 </aside>
                 <!-- get rid of the menu when done -->
@@ -50,9 +50,9 @@
                     <div class="row header-row-position-relative">
 
                         <!-- Logo -->
-                        <div class="large-2 columns show-for-medium-up header-column-position-static">
+                        <a href="index.html" class="large-2 columns show-for-medium-up header-column-position-static">
                             <img class="logo vertical-align-center" src="img/logo.png"/>
-                        </div> <!-- end large-2 -->
+                        </a> <!-- end large-2 -->
 
 
                         <!-- Navigation -->
@@ -76,7 +76,7 @@
                                                 <li><a href="#">Our Partners</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="#">Contact Us</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
                                 </section>
                             </nav>    
@@ -95,12 +95,12 @@
 
                                 <!-- Sign in button -->
                                 <div class="header-sign-in">
-                                    <a href="#" class="button round">Sign in</a>
+                                    <a href="login.html" class="button round">Sign in</a>
                                 </div>
 
                                 <!-- Not registered link -->
                                 <div class="header-register">
-                                    <a href="#">Not registered?</a>
+                                    <a href="create-account.html">Not registered?</a>
                                 </div>
 
     <!--                        </div>-->
