--- a/src/styles/base/_colours.scss
+++ b/src/styles/base/_colours.scss
@@ -18,17 +18,25 @@ $grey: #c8c7c7;
 // 200 199 199
 $aluminium: #dbdbdb;
 // 219 219 219
+$black: #3c3c3c;
+// 60 60 60
 $overlay: #f2f4f5;
 // 242 244 245
+$grey2: #c8c7c7; // causes slider
+// 231 215 206
+//$offwhite: #f1f1f1; // causes slider
+//// 200 199 199
 
 
 // Text
 $colr-txt: $white;
+$colr-txt-dark: $black;
 $colr-txt-dropdown: $purple;
 $colr-txt-accent: $purple;
 $colr-txt-menu-item: $aluminium;
 // Button - all the same for: submit, signup and Continue (join)
 $colr-btn-signin: $pink;
+$colr-btn-newsleter: $purple;
 $colr-btn: $purple;
 // Mobile off canvas menu
 $colr-mob-menu: $purple;
@@ -42,7 +50,7 @@ $colr-pnl-summary: $white;
 $colr-pnl-talkabout: $purple;
 $colr-pnl-contactus: $grey;
 $colr-pnl-signup: $pink;
-$colr-pnl-footer: $white;
+$colr-pnl-footer: $purple;
 // Hero Panel
 $colr-hero-tile: $green;
 $colr-hero-tile2: $mustard;
@@ -51,6 +59,8 @@ $colr-hero-txt: $purple;
 $colr-bnr-tweet: $pink;
 $colr-bnr-news: $pink;
 
+$colr-social-tile-bg: $white;
+$colr-social-tile-title: $pink;
 
 
 
