--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,33 +12,34 @@
 // =================
 
 @import "vendors/foundation";
+@import "vendors/slick";
+@import "vendors/slick-theme";
 
 // =================
 // Site
 // =================
-
-
-
-@import "components/global";
-@import "components/buttons";
-@import "components/carousel";
-@import "components/dropdown";
-@import "components/cubes";
-
 
 @import "layout/footer";
 @import "layout/forms";
 @import "layout/header";
 @import "layout/nav";
 
-@import "pages/contact";
-@import "pages/home";
-@import "pages/login";
-@import "pages/registration";
-
 @import "utils/functions";
 @import "utils/mixins";
 @import "utils/responsive";
+
+@import "components/global";
+@import "components/buttons";
+@import "components/slider";
+@import "components/dropdown";
+@import "components/cubes";
+
+@import "pages/home";
+@import "pages/contact";
+@import "pages/login";
+@import "pages/registration";
+
+
 
 
 
