--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -2,25 +2,8 @@
    PAGES / HOME 
    ================================= */
 
-$triangle-border-left: rem-calc(38);
-$triangle-border-right: rem-calc(38);
-$triangle-border-bottom: rem-calc(38);
-$triangle-pos-top: -$triangle-border-bottom;
-
-.triangle-up {
-    width: 0;
-    height: 0;
-    border-left: $triangle-border-left solid transparent;
-    border-right: $triangle-border-right solid transparent;
-    top: $triangle-pos-top + rem-calc(1); // overlap of 1px as chrome inconsistently leaves a 1px gap between pnl and triangle
-    left: 50%;
-    transform: translateX(-50%);
-    position: absolute;
-    z-index: 20;
-}
-
 .pnl {
-    // padding-top: rem-calc(65); not able to add padding to top as colours over before arrow up
+    // padding-top: rem-calc(65); not able to add padding to top as colours over :before arrow up
     padding-bottom: rem-calc(40);
     // increase z-index so that cube rotate doesn't separate triangle from panel
     z-index: 12;
@@ -38,6 +21,7 @@ $triangle-pos-top: -$triangle-border-bottom;
         text-align: center;
     }
 }
+
 .pnl-dark-txt {
     
     h1, h2, h3, h4, p {
@@ -66,12 +50,15 @@ $triangle-pos-top: -$triangle-border-bottom;
         }
     }
 }
+
 .h2-hero {
     padding-top: rem-calc(50);   
 }
+
 .h4-hero {
     padding-top: rem-calc(15);
 }
+
 .hero-continue {
     
     .button {
@@ -82,17 +69,6 @@ $triangle-pos-top: -$triangle-border-bottom;
     }
 }
 
-//**************** TEST 
-
-.box {
-    height: 100px;
-    width: 100px;
-    background-color: green;
-    z-index: 25;
-    border: 5px solid black;
-    text-align: center;
-    
-}
 
 // *************** 
 // MARKETING PANEL 
@@ -105,8 +81,7 @@ $triangle-pos-top: -$triangle-border-bottom;
     position: relative;
 
     &:before {
-        @extend .triangle-up;
-        border-bottom: $triangle-border-bottom solid $colr-pnl-marketing;
+        @include triangle (38, $colr-pnl-marketing);       
     }
 }
 
@@ -121,8 +96,7 @@ $triangle-pos-top: -$triangle-border-bottom;
     position: relative;
     
     &:before {
-        @extend .triangle-up;
-        border-bottom: $triangle-border-bottom solid $colr-pnl-causes;
+        @include triangle (38, $colr-pnl-causes);
     }
 }
 
@@ -137,8 +111,7 @@ $triangle-pos-top: -$triangle-border-bottom;
     position: relative;
     
     &:before {
-        @extend .triangle-up;
-        border-bottom: $triangle-border-bottom solid $colr-pnl-marketers;
+        @include triangle (38, $colr-pnl-marketers);
     }
 }
 
@@ -156,49 +129,104 @@ $summary-info-height: rem-calc(137);
     position: relative;
  
     &:before {
-        @extend .triangle-up;
-        border-bottom: $triangle-border-bottom solid $colr-pnl-summary;
+        @include triangle (38, $colr-pnl-summary);
     }  
 }
 
-ul li {
+.summary-boxes li {
     
     position: relative;
-//    overflow: hidden;
-    padding-bottom: 0;
-    margin: 0 rem-calc(10);
+    padding: 0 rem-calc(10);
+    overflow: hidden;
+    margin-bottom: rem-calc(10);
     
     .summary-title, .summary-info {
-        position: absolute;
-        width: calc(100% - 20px);
-        bottom: 0;
-        left: 0;
-        margin: 0 10px;
-        
-        background-color: $overlay;
+        position: absolute;  
+        width: calc(100% - #{rem-calc(20)}); //sass interpolation 
+        left: rem-calc(10);
         text-align: center;
+        background-color: $overlay; 
         vertical-align: middle;
         text-size: rem-calc(20);
-        color: $purple;
-        z-index: 20;
-    }
-    .summary-title {
-        padding: 10px;    
-
-    }
-    .summary-info {
-        transform: translateY(0);
-//        display: none;
-//        visibility: hidden;
     }
     
-    &:hover .summary-info {
-        padding-bottom: 50px;
+    .summary-title {
+        
+        bottom: rem-calc(-1); // to compensate chrome pixel line
+        height: rem-calc(50);
+        line-height: rem-calc(50);
+        z-index: 20;
+        transition: background-color .5s, color .5s; // fade in at same rate as summary-info slides up - visual effect
+    
+        &:before {
+            @include triangle (12, $overlay);
+            transition: border-bottom-color .5s; // same visual effect on before triangle
+        }
+        
+        // to ensure event is activated via hover on desktop and click on mobile device
+        &:hover,
+        &.click-event{
+            
+            + .summary-info {
+                transform: translateY(0);  // translate next sibling 
+            }  
+        } 
+    }
+    
+    .summary-info {
+        
+        bottom: 0;
+        padding: rem-calc(10);
+        padding-bottom: rem-calc(60); //bottom padding is height of summary title and small triangle 
+        opacity: 0.9;
+        z-index: 10;
+
         transform: translateY(100%);
         transition: transform .5s;
-//        visibility: visible;
     }
+    
 }
+
+// hover or click summary title to change the colour of the title and the :before psuedo element
+
+.summary-title:hover,
+.summary-title.click-event {
+    
+    color: $overlay; 
+    
+    // li summary panel given background colour so that I may use this to give the summary title the same colour on hover/click
+    // as the image placed in the panel - seemed the best way to extract and apply colour as not able to get colour of img
+    
+    .summary-pink & {
+        background-color: $pink;  
+        &:before {
+            border-bottom-color: $pink;
+        }
+    }
+    
+    .summary-purple & {
+        background-color: $purple;
+        &:before {
+            border-bottom-color: $purple;
+        }
+    }
+    
+    .summary-green & {
+        background-color: $green;
+        &:before {
+            border-bottom-color: $green;
+        }
+    }
+    
+    .summary-mustard & {
+        background-color: $mustard;
+        &:before {
+            border-bottom-color: $mustard;
+        }
+    }
+       
+}
+            
 
 // *************** 
 // TALKABOUT PANEL 
@@ -211,8 +239,7 @@ ul li {
     position: relative;
  
     &:before {
-        @extend .triangle-up;
-        border-bottom: $triangle-border-bottom solid $colr-pnl-talkabout;
+        @include triangle (38, $colr-pnl-talkabout);
     }  
 }
 
@@ -227,8 +254,7 @@ ul li {
     position: relative;
     
     &:before {
-        @extend .triangle-up;
-        border-bottom: $triangle-border-bottom solid $colr-pnl-contactus;
+        @include triangle (38, $colr-pnl-contactus);
     }    
 }
 
@@ -243,9 +269,29 @@ ul li {
     position: relative;
     
     &:before {
-        @extend .triangle-up;
-        border-bottom: $triangle-border-bottom solid $colr-pnl-signup;
+        @include triangle (38, $colr-pnl-signup);
     }    
+}
+
+
+.social-tile {
+    min-height: 20em;
+    background-color: $colr-social-tile-bg;
+    position: relative;
+}
+
+
+.social-tile-title {
+    position: absolute;
+    bottom:0;
+    background-color: $colr-social-tile-title;
+    vertical-align: bottom;
+    width: 100%;
+    margin: 0;
+    padding: 1em;
+    &:before {
+        @include triangle (16, $colr-social-tile-title);
+    }
 }
 
 
