--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -1,3 +1,10 @@
 /* =================================
    PAGES / LOGIN 
    ================================= */
+
+.pnl-login {
+    @extend .pnl-dark-txt;
+    padding-top: rem-calc(65); 
+    padding-bottom: rem-calc(40);
+    background-color: $white;
+}
