Foundation equalizer classes on slider columns to maintain same height columns Included Sliders for both Causes and Marketers Amended Summary tiles to include 'Read Me' link Added styling for Social Media panel - Latest News and Twitter Widget

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,18 +26,19 @@
 
 @import "utils/functions";
 @import "utils/mixins";
-@import "utils/responsive";
 
 @import "components/global";
 @import "components/buttons";
 @import "components/slider";
 @import "components/dropdown";
 @import "components/cubes";
+@import "components/twitter";
 
 @import "pages/home";
 @import "pages/contact";
 @import "pages/login";
 @import "pages/registration";
+@import "utils/responsive";
 
 
 
