--- a/src/styles/utils/_responsive.scss
+++ b/src/styles/utils/_responsive.scss
@@ -3,9 +3,9 @@
    ================================= */
 
 
-// ======================================================
+// ******************************************************
 // SMALL - max-width 640px, mobile styles
-// ======================================================
+// ******************************************************
 
 @media #{$small-up} {
     
@@ -17,12 +17,44 @@
         margin-top: rem-calc(10);
         width: 45%;
     } 
-}
+    
+    
+    // CAUSES SLIDER
+    // ===============
+    
+//    .causes-slider {
+//        
+//        .causes-right {
+//            
+//            min-height: 0; // so that image is full height of column
+//        }
+//    }
+    
+    // MARKETER SLIDER
+    // ===============
+    
+//    .marketer-slider {
+//        
+//        .marketer-left {
+//            
+//            min-height: 0; // so that image is full height of column
+//        }
+//    }
+    
+    // TALKABOUT PANEL 
+    // ===============
+    
+//    .social-tile {
+//        height: auto;
+////        line-height: auto;    
+//    }
+    
+} // end media query small-up
 
 
-// ======================================================
+// ******************************************************
 // MEDIUM - min-width 641px and max-width 1024px, tablet
-// ======================================================
+// ******************************************************
 
 @media #{$medium-up} {
     
@@ -75,12 +107,21 @@
     .header-register { 
         visibility: hidden;  
     }
+    
+    
+    // TALKABOUT PANEL 
+    // ===============
+    
+//    .social-tile {
+//        height: rem-calc(462); //height 370px plus triangle 18px plus pink bar 74 = 462
+////        line-height: rem-calc(462);
+//    }
 }
 
 
-// ==========================================================================
+// **************************************************************************
 // LARGE: 1025px - 1440px,  X-LARGE: 1441px - 1920px,  XX-LARGE: 1921px - ...
-// ==========================================================================
+// **************************************************************************
 
 @media #{$large-up} {
     
@@ -132,5 +173,5 @@
     .header-register {
         visibility: visible;
     }
-    
+     
 }
