--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -79,6 +79,10 @@
     @extend .pnl-light-txt;
     background-color: $colr-pnl-marketing;
     position: relative;
+    
+    p {
+        font-size: rem-calc(18);
+    }
 
     &:before {
         @include triangle (38, $colr-pnl-marketing);       
@@ -95,6 +99,8 @@
     background-color: $colr-pnl-causes;
     position: relative;
     
+    // more styling in slider.scss
+    
     &:before {
         @include triangle (38, $colr-pnl-causes);
     }
@@ -109,6 +115,8 @@
     @extend .pnl-light-txt;
     background-color: $colr-pnl-marketers;
     position: relative;
+    
+    // more styling in slider.scss
     
     &:before {
         @include triangle (38, $colr-pnl-marketers);
@@ -183,6 +191,10 @@ $summary-info-height: rem-calc(137);
 
         transform: translateY(100%);
         transition: transform .5s;
+        
+        .read-more {
+            @include readmore;
+        }
     }
     
 }
@@ -232,9 +244,12 @@ $summary-info-height: rem-calc(137);
 // TALKABOUT PANEL 
 // *************** 
 
+$social-title-height: rem-calc(74);
+
 .pnl-talkabout, #pnl-talkabout-colr-to-edge {
     @extend .pnl;
     @extend .pnl-light-txt;
+//    padding-bottom: rem-calc(80); // extra padding added as minus bottom value for social-tile-title
     background-color: $colr-pnl-talkabout;
     position: relative;
  
@@ -242,6 +257,70 @@ $summary-info-height: rem-calc(137);
         @include triangle (38, $colr-pnl-talkabout);
     }  
 }
+
+.social-tile {
+    
+//    height: rem-calc(462); //height 370px plus triangle 18px plus pink bar 74 = 462
+    background-color: $colr-social-tile-bg;
+    padding-bottom: rem-calc(80);
+    position: relative;
+    
+    .social-box {
+        
+        padding: rem-calc(15);
+    
+        .news-heading {
+            font-size: rem-calc(30);
+            font-family: 'Open Sans';
+            font-weight: lighter;
+            padding-top: rem-calc(5);
+            padding-bottom: rem-calc(5);  
+            color: $colr-slider-text;   
+        }
+
+        .news-info {
+            font-size: rem-calc(18);
+            font-family: 'Open Sans';
+            color: $colr-slider-text;
+            
+//            .read-more {
+//                font-size: rem-calc(18);
+//                font-family: 'Open Sans';
+//                font-weight: normal;
+//                color: $colr-readmore;    
+//            }
+            
+            .read-more {
+                @include readmore;
+            }
+        }    
+    }
+    
+    .tweet-box {
+        
+        padding: rem-calc(10) rem-calc(5);
+        height: rem-calc(354); // minus 18px for social-tile-title
+        overflow-y: scroll;
+        overflow-x: hidden;
+        
+    }
+    
+    .social-tile-title {
+        
+        height: $social-title-height;
+        line-height: $social-title-height;
+        position: absolute;
+        bottom: 0; 
+        background-color: $colr-social-tile-title;
+        width: 100%;
+        margin: 0;
+        
+        &:before {
+            @include triangle (16, $colr-social-tile-title);
+        }
+    }
+}
+
 
 // ****************
 // CONTACT US PANEL 
@@ -274,25 +353,6 @@ $summary-info-height: rem-calc(137);
 }
 
 
-.social-tile {
-    min-height: 20em;
-    background-color: $colr-social-tile-bg;
-    position: relative;
-}
-
-
-.social-tile-title {
-    position: absolute;
-    bottom:0;
-    background-color: $colr-social-tile-title;
-    vertical-align: bottom;
-    width: 100%;
-    margin: 0;
-    padding: 1em;
-    &:before {
-        @include triangle (16, $colr-social-tile-title);
-    }
-}
 
 
 
