--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -2,7 +2,7 @@
    PAGES / LOGIN 
    ================================= */
 
-.pnl-login {
+.page-login {
     @extend .pnl-dark-txt;
     padding-top: rem-calc(65); 
     padding-bottom: rem-calc(40);
