--- a/src/styles/pages/_registration.scss
+++ b/src/styles/pages/_registration.scss
@@ -2,7 +2,7 @@
    PAGES / REGISTRATION 
    ================================= */
 
-.pnl-register {
+.page-register {
     @extend .pnl-dark-txt;
     padding-top: rem-calc(65); 
     padding-bottom: rem-calc(40);
