--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,7 @@
+/* =================================
+   BASE / SETTINGS
+   ================================= */
+
 // Foundation by ZURB
 // foundation.zurb.com
 // Licensed under MIT Open Source
@@ -644,15 +648,17 @@ $button-bg-hover: scale-color($button-bg-color, $lightness: $button-function-fac
 // $form-label-font-size: rem-calc(14);
 // $form-label-font-weight: $font-weight-normal;
 // $form-label-line-height: 1.5;
+// $form-label-line-height: rem-calc(52); 
 // $form-label-font-color: scale-color($black, $lightness: 30%);
 // $form-label-small-transform: capitalize;
 // $form-label-bottom-margin: 0;
 // $input-font-family: inherit;
-// $input-font-color: rgba(0,0,0,0.75);
-// $input-font-size: rem-calc(14);
+ $input-font-color: rgba(0,0,0,0.75);
+ $input-font-size: rem-calc(18);
 // $input-placeholder-font-color: #cccccc;
 // $input-bg-color: $white;
 // $input-focus-bg-color: scale-color($white, $lightness: -2%);
+$input-focus-bg-color: $purple;
 // $input-border-color: scale-color($white, $lightness: -20%);
 // $input-focus-border-color: scale-color($white, $lightness: -40%);
 // $input-border-style: solid;
