--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -19,3 +19,10 @@
 .underline {
 	text-decoration: underline;
 }
+
+// dropdown and front page hero panel
+$lato: Lato, sans-serif;
+
+// Front page
+$open-sans: 'Open Sans', sans-serif;
+
