Deleted .png images and tidied a couple of files

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -136,6 +136,8 @@
     background-color: $colr-pnl-marketers;
     position: relative;
     
+    // more styling in slider.scss
+    
     &:before {
         @include triangle (38, $colr-pnl-marketers);
     }
